# nmide

./: .env.local  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  Modules-v2.toml  Modules.toml  README.md  build.md  buildServer.sh  cliff.toml  draftName.sh  eslint.config.js  flake.nix  index.html  issueGen  issueGen.py  issueGen.sh  justfile  makefile  modules.ts  package-lock.json  package.json  preBuild.sh  pushToSvn.sh  refreshModules.sh  requirements.txt  server.html  shell.nix  specification.yaml  startIde.sh  startServer.sh  tsconfig.json  updateChangelog.sh  vite.config.ts  ¨
apps/ide/src-tauri/: Cargo.toml  tauri.conf.json
core/src-tauri/: .gitignore  Cargo.toml  Dockerfile  Tauri.toml  build.rs
core/src-tauri/.cargo/: config.toml
core/src-tauri/capabilities/: nmide-capabilities.json
core/src-tauri/core-cm-installer/: Cargo.toml
core/src-tauri/core-macros/: Cargo.toml
core/src-tauri/core-module-lib/: Cargo.toml
core/src-tauri/core-plugin-lib/: Cargo.toml
core/src-tauri/core-std-lib/: CHANGELOG.md  Cargo.toml
core/src-tauri/core_modules/: Cargo.toml
core/src-tauri/foreign-std-lib/: Cargo.toml
core/src-tauri/modules/: Cargo.toml
core/src-tauri/src/: app.rs  core.rs  core_modification_handler.rs  eventThrower.rs  handlers.rs  ide.rs  lib.rs  main.rs  server.rs  setup.rs  statics.rs
core/src-tauri/static/: all-modules.js  ide.html  ide_framework_style.css  ide_pm_style.css  index.css  modules.js  server.js
core/src-tauri/template/: build.ts  index.html
libs/haskell/nmide/: nmide.cabal
libs/rust/: Cargo.toml
libs/rust/core-macros/: Cargo.toml
libs/rust/core-module-lib/: Cargo.toml
libs/rust/core-std-lib/: Cargo.toml
libs/rust/foreign-std-lib/: Cargo.toml
libs/rust/html-translator/: Cargo.toml
module-tester/rsm-bundler/: Cargo.toml
module-tester/rsm-bundler/src/: main.rs
modules/: .gitignore  Cargo.toml  makefile
modules/counter-plugin/: build.js  index.ts  package.json
modules/dependency-viewer/: DependencyViewerHelper.js  build.js  bun.lockb  dag.js  dependency-viewer-style.css  index.html  main.ts  module.ts  package.json  tsconfig.json
modules/dummy_module/: Cargo.toml
modules/dummy_module/src/: lib.rs
modules/editor-ar/: Cargo.toml
modules/editor-ar/src/: lib.rs
modules/editor_buffer/: Cargo.toml
modules/editor_buffer/src/: lib.rs
modules/editor_render/: Cargo.toml
modules/editor_render/src/: lib.rs
modules/event_sender/: Cargo.toml  debug.ts  event_sender_style.css  module.ts  package.json
modules/event_sender/src/: lib.rs  ui.rs
modules/ide-editor/: build.js  index.ts  package.json  tsconfig.json
modules/ide-errors/: build.js  build.ts  index.ts  package.json  tsconfig.json
modules/ide-framework/: main.ts
modules/ide-js/: build.ts  package.json
modules/ide-js/lib/: constants.ts  tabularUtils.ts
modules/ide-js/modules/: error-style.css  f-squared.ts  post-tabular.ts
modules/ide_cache/: Cargo.toml
modules/ide_cache/src/: lib.rs
modules/ide_explorer/: Cargo.toml  ide_explorer_style.css  index.ts  package.json  unPureCode.js
modules/ide_explorer/src/: lib.rs
modules/ide_framework/: Cargo.toml
modules/ide_framework/src/: lib.rs
modules/ide_fsa/: Cargo.toml  README.md
modules/ide_fsa/src/: fsa.rs  lib.rs  test_fsa.rs
modules/ide_pm/: Cargo.toml
modules/ide_pm/src/: lib.rs
modules/ide_pm_style/: ide_pm_style.css
modules/ide_save/: build.ts  index.ts
modules/ide_tabs/: Cargo.toml  ide_tabs_style.css
modules/ide_tabs/src/: event.rs  lib.rs  post_init.rs
modules/info-modules/: Cargo.toml  package.json
modules/magnolia_dependency/: Cargo.toml
modules/magnolia_dependency/src/: lib.rs
modules/menu-plugin/: index.ts
modules/module_installer/: .gitignore  Cargo.toml
modules/module_installer/src/: lib.rs  module_installer.rs
modules/reggub/: init.ts  update.ts
modules/rs-counter-plugin-example/: Cargo.toml  rt-style.css
modules/rs-counter-plugin-example/src/: lib.rs
modules/rust_dependency/: Cargo.toml
modules/rust_dependency/src/: lib.rs  tests.rs
modules/standalone-js-counter/: index.ts  package.json
modules/state-man/: README.md  package.json
modules/state_viz/: README.md  build.ts  module.ts  state_viz_style.css
modules/tab_wrapper/: Cargo.toml
modules/tab_wrapper/src/: lib.rs
modules/trivial_module/: Cargo.toml
modules/trivial_module/src/: lib.rs
modules/window-getter/: index.ts
nmide-core/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
nmide-core/src-tauri/capabilities/: migrated.json
nmide-core/src-tauri/nmide-macros/: Cargo.toml
nmide-core/src-tauri/nmide-plugin-manager/: CHANGELOG.md  Cargo.toml
nmide-core/src-tauri/nmide-std-lib/: CHANGELOG.md  Cargo.toml
nmide-lib/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  nmide.c  nmide.h
nmide-lib/chtml/: chtml.c  chtml.h
nmide-lib/cinterface/: cinterface.h
nmide-lib/cmap/: cmap.c  cmap.h
nmide-lib/cmodel/: cmodel.c  cmodel.h
nmide-lib/cmsg/: cmsg.c  cmsg.h
nmide-lib/html/: css.c  css_lib.c  html.c  html.h  html_lib.c  html_lib.h
nmide-lib/interface/: cinterface.h
nmide-lib/map/: cmap.c  cmap.h
nmide-lib/model/: cmodel.c  cmodel.h
nmide-lib/msg/: cmsg.h
nmide-lib/test/: test_nmide.c  test_nmide.h  test_util.c  test_util.h
nmide-plugin/nmide-manager/: Cargo.toml
nmide-plugin/nmide-plugin-c/: CHANGELOG.md  CMakeLists.txt  cliff.toml  main.c  main.h
nmide-tests/c-test/: Cargo.toml  build.rs
plugins/info-modules/: Cargo.toml  build.js  package-lock.json
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/core_modules/: Cargo.toml
src-tauri/modules/: linkModules.sh  makefile
src-tauri/nmide-ffi/: Cargo.toml
src-tauri/nmide-framework/: Cargo.toml
src-tauri/nmide-libc/: Makefile  nmidelib.c  nmidelib.h
src-tauri/nmide-rust-ffi/: .gitignore  Cargo.toml  build.rs
src-tauri/src/: either.rs  errors.rs  main.rs  plugload.rs  server.rs  types.rs
src-tauri/static/: all-modules.html  index.html
tests/rust-test/: Cargo.toml
tools/debug-core/: Cargo.toml
(+1154 files in other folders)
