[workspace]
members = ["nmide-rust-ffi"]

[package]
name = "nmide"
version = "0.1.0"
description = "A simple IDE"
authors = ["Nils Michael Fitjar"]
license = ""
repository = "https://git.app.uib.no/Nils.Fitjar/nmide"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
dotenv = "0.15.0"
eyre = "0.6.12"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.12"
log = "0.4.21"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] } 
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
dotenv = "0.15.0"
anyhow = "1.0.86"
nmide-lib = { git = "https://github.com/Neelzee/nmide-lib.git" }
nmide-rust-ffi.path = "nmide-rust-ffi"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
env = { RUST_LOG = "debug" }
