[workspace]
members = [ "nmide-framework", "nmide-rust-ffi" ]

[package]
name = "nmide"
version = "0.1.0-alpha"
description = "A simple IDE"
authors = ["Nils Michael Fitjar <nfi005@uib.no>"]
license = ""
repository = "https://git.app.uib.no/Nils.Fitjar/nmide"
edition = "2021"
default-run = "nmide"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
dotenv = "0.15.0"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] } 
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow = "1.0.86"
nmide-rust-ffi.path = "nmide-rust-ffi"
libloading = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

