[package]
authors = ["Nils Michael Fitjar <nfi005@uib.no>"]
description = "A simple, modular, IDE"
edition = "2021"
license = "MIT License"
name = "core"
readme = "../../README.md"
repository = "https://github.com/Neelzee/nmide"
version = "2.0.0"

[workspace]
members = [
  "core_modules",
  "modules/dummy_module",
  "modules/editor-ar",
  "modules/editor_buffer",
  "modules/editor_render",
  "modules/ide_cache",
  "modules/ide_explorer",
  "modules/ide_framework",
  "modules/ide_fsa",
  "modules/ide_pm",
  "modules/ide_tabs",
  "modules/magnolia_dependency",
  "modules/module_installer",
  "modules/rust_dependency",
  "modules/tab_wrapper",
  "modules/trivial_module",
  "modules/rs-counter-plugin-example",
  "tools/cm-installer",
  "tools/debug-core",
  "tools/module-tester/rsm-grapher",
  "tools/module-tester/rsm-grapher/rsm-invoker",
  "tools/module-tester/rsm-grapher/rsm-handler",
  "libs/rust/core-macros",
  "libs/rust/core-std-lib",
  "libs/rust/core-module-lib",
  "libs/rust/foreign-std-lib",
  "libs/rust/html-translator"
]
resolver = "3"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "core_lib"

[build-dependencies]
tauri-build = { features = [], version = "2.1.1", optional = true }

[dependencies]
clap = { version = "4.5.39" }
anyhow = "1.0.97"
async-trait = "0.1.88"
futures = "0.3.31"
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
once_cell = "1.21.3"
core-std-lib = { path = "./libs/rust/core-std-lib/", features = ["core"] }
core-module-lib = { path = "./libs/rust/core-module-lib/" }
foreign-std-lib = { path = "./libs/rust/foreign-std-lib/", optional = true }
tauri = { features = [
  "protocol-asset",
  "config-toml",
], version = "2.4.1", optional = true }
tauri-plugin-dialog = { version = "2.4.2", optional = true }
tauri-plugin-fs = { version = "2.4.4", optional = true }
tauri-plugin-log = { version = "2.7.1", optional = true }
tauri-plugin-shell = { version = "2.3.3", optional = true }
tauri-plugin-cli = { version = "2.4.1", optional = true }
tokio = { features = ["full"], version = "1.48.0" }
abi_stable = { version = "0.11.3", optional = true }
async-ffi = { version = "0.5.0", features = ["abi_stable"], optional = true }
serde_json = "1.0.145"
toml = { version = "0.9.8", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
env_logger = "0.11.8"
actix-web = { version = "4.11.0", optional = true }
actix-files = { version = "0.6.8", optional = true }
core_modules = { path = "./core_modules" }

[workspace.dependencies]
core-std-lib = { path = "./libs/rust/core-std-lib/" }
core-module-lib = { path = "./libs/rust/core-module-lib/" }
core-macros = { path = "./libs/rust/core-macros/" }
foreign-std-lib = { path = "./libs/rust/foreign-std-lib/" }
async-trait = "0.1.88"
anyhow = "1.0.97"
serde_json = "1.0.145"
serde = { version = "1.0.228" }
regex = "1.12.2"
tokio = "1.48.0"
once_cell = "1.21.3"
abi_stable = { version = "0.11.3" }
async-ffi = { version = "0.5.0" }
core_modules = { path = "./core_modules" }
log = { version = "0.4.27" }
serialize-to-javascript = "0.1.2"
hashable = "0.0.0"
ordered-float = "5.1.0"
rstest = "0.26.1"
ts-rs = "11.1.0"
stabby = "72.1.1"
debug-core = { path = "./tools/debug-core" }
futures = "0.3.31"
scraper = "0.24.0"
pretty_assertions = "1.4.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["runtime_modules"]
runtime_modules = ["dep:abi_stable", "dep:async-ffi", "dep:foreign-std-lib"]
module-installer = ["dep:toml", "dep:serde"]
server = ["dep:actix-web", "dep:actix-files", "dep:serde"]
ide = [
  "dep:tauri",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-fs",
  "dep:tauri-plugin-log",
  "dep:tauri-plugin-shell",
  "dep:tauri-plugin-cli",
  "dep:tauri-build",
]
tui = []
