[package]
authors = ["Nils Michael Fitjar <nfi005@uib.no>"]
description = "A simple, modular, IDE"
edition = "2021"
license = "MIT License"
name = "core"
readme = "../../README.md"
repository = "https://github.com/Neelzee/nmide"
version = "2.0.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "core_lib"

[build-dependencies]
tauri-build = { features = [], version = "2.1.1", optional = true }

[dependencies]
clap = { version = "4.5.39" }
anyhow = "1.0.97"
async-trait = "0.1.88"
futures = "0.3.31"
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
once_cell = "1.21.3"
core-std-lib = { path = "../../libs/rust/core-std-lib/", features = ["core"] }
core-module-lib = { path = "../../libs/rust/core-module-lib/" }
foreign-std-lib = { path = "../../libs/rust/foreign-std-lib/", optional = true }
tauri = { features = [
  "protocol-asset",
  "config-toml",
], version = "2.4.1", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2.2.1", optional = true }
tauri-plugin-log = { version = "2.3.1", optional = true }
tauri-plugin-shell = { version = "2.2.1", optional = true }
tauri-plugin-cli = { version = "2.2.0", optional = true }
tokio = { features = ["full"], version = "1.44.2" }
abi_stable = { version = "0.11.3", optional = true }
async-ffi = { version = "0.5.0", features = ["abi_stable"], optional = true }
log4rs = "1.3.0"
serde_json = "1.0.140"
toml = { version = "0.9.5", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
env_logger = "0.11.8"
actix-web = { version = "4.11.0", optional = true }
actix-files = { version = "0.6.7", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["runtime_modules"]
runtime_modules = ["dep:abi_stable", "dep:async-ffi", "dep:foreign-std-lib"]
module-installer = ["dep:toml", "dep:serde"]
server = ["dep:actix-web", "dep:actix-files"]
ide = [
  "dep:tauri",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-fs",
  "dep:tauri-plugin-log",
  "dep:tauri-plugin-shell",
  "dep:tauri-plugin-cli",
  "dep:tauri-build",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# ============================================================================ #
