[workspace]
members = ["core-macros", "core-module-lib", "core-std-lib", "foreign-std-lib", "html-translator"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
core-std-lib = { path = "./core-std-lib/" }
rstest = "0.26.1"
scraper = "0.24.0"
serde = { version = "1.0.228" }
serde_json = "1.0.145"
pretty_assertions = "1.4.1"
abi_stable = { version = "0.11.3" }
stabby = { version = "72.1.1" }
ts-rs = { version = "11.1.0" }
ordered-float = { version = "5.1.0" }
async-trait = "0.1.89"
core-macros = { path = "./core-macros/" }
hashable = "0.0.0"
foreign-std-lib = { path = "./foreign-std-lib" }
log = "0.4.28"
serialize-to-javascript = "0.1.2"
async-ffi = { version = "0.5.0" }