[package]
name = "rsm-bundler"
version = "0.1.0"
edition = "2024"

[dependencies]
core-std-lib = { path = "../../core/src-tauri/core-std-lib/" }
core-module-lib = { path = "../../core/src-tauri/core-module-lib/" }
async-trait = "0.1.88"
tokio = { version = "1.44.2", features = ["full"] }
once_cell = "1.21.3"
futures = "0.3.31"

# ============================================================================ #


[dependencies.ide_cache]
features = []
path = "/home/nmf/Documents/nmide/modules/ide_cache"


[dependencies.ide_framework]
features = []
path = "/home/nmf/Documents/nmide/modules/ide_framework"


[dependencies.ide_fsa]
features = []
path = "/home/nmf/Documents/nmide/modules/ide_fsa"


[dependencies.ide_pm]
features = []
path = "/home/nmf/Documents/nmide/modules/ide_pm"


[dependencies.magnolia_dependency]
features = []
path = "/home/nmf/Documents/nmide/modules/magnolia_dependency"


[dependencies.trivial_module]
features = []
path = "/home/nmf/Documents/nmide/modules/trivial_module"
