[package]
name = "ide_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
core-std-lib = { workspace = true }
core-module-lib = { workspace = true }
once_cell = "1.21.3"
regex = { version = "1.11.1", features = ["std"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
async-trait = "0.1.88"
tokio = { version = "1.44.2", features = ["full"] }
