[package]
name = "ide_fsa"
version = "0.1.0"
edition = "2021"

[lib]
name = "ide_fsa"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
debug-core = { path = "../../tools/debug-core" }

[dependencies]
anyhow = "1.0.97"
core-std-lib = { workspace = true }
core-module-lib = { workspace = true }
once_cell = "1.21.3"
regex = { version = "1.11.1", features = ["std"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
async-trait = "0.1.88"
tokio = { version = "1.44.2", features = ["full"] }
