[package]
name = "rs-counter-plugin-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_counter_plugin_example"
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = "0.11.3"
foreign-std-lib = { path = "../../libs/rust/foreign-std-lib/" }
core-std-lib = { path = "../../libs/rust/core-std-lib/" }
core-module-lib = { path = "../../libs/rust/core-module-lib/" }
async-ffi = { version = "0.5.0", features = ["abi_stable"] }
