[package]
name = "nmide-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid.version = "1.10.0"
uuid.features = ["v4"]
nmide-plugin-manager = { path = "../../nmide-core/src-tauri/nmide-plugin-manager/" }
nmide-std-lib = { path = "../../nmide-core/src-tauri/nmide-std-lib" }
once_cell = "1.19.0"
anyhow = "1.0.86"
tokio = { version = "1.39.2", features = ["sync"] }
