[package]
name = "c-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
libloading = "0.8.5"
once_cell = "1.19.0"
rstest = "0.22.0"
tokio = { version = "1.39.3", features = ["full"] }
nmide-plugin-manager = { path = "../../nmide-core/src-tauri/nmide-plugin-manager" }
nmide-rust-ffi = { path = "../../nmide-wrapper/nmide-rust-ffi" }

[[bin]]
name = "force-build"
path = "build.rs"
