[package]
name = "info-modules"
version = "0.1.0"
edition = "2021"

[lib]
name = "info_modules"
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = "0.11.3"
anyhow = "1.0.93"
nmide-std-lib = { path = "../../core/src-tauri/nmide-std-lib" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
