[package]
name = "core_modules"
version = "0.1.0"
edition = "2024"

[dependencies]
core-std-lib = { workspace = true, features = ["core"] }
core-module-lib = { workspace = true }

# ============================================================================ #


[dependencies.ide_cache]
features = []
path = "/home/nmf/nmide/src-tauri/modules/ide_cache"


[dependencies.ide_explorer]
features = []
path = "/home/nmf/nmide/src-tauri/modules/ide_explorer"


[dependencies.ide_framework]
features = []
path = "/home/nmf/nmide/src-tauri/modules/ide_framework"


[dependencies.ide_fsa]
features = []
path = "/home/nmf/nmide/src-tauri/modules/ide_fsa"


[dependencies.ide_pm]
features = []
path = "/home/nmf/nmide/src-tauri/modules/ide_pm"


[dependencies.ide_tabs]
features = []
path = "/home/nmf/nmide/src-tauri/modules/ide_tabs"


[dependencies.magnolia_dependency]
features = []
path = "/home/nmf/nmide/src-tauri/modules/magnolia_dependency"


[dependencies.module_installer]
features = []
path = "/home/nmf/nmide/src-tauri/modules/module_installer"


[dependencies.rust_dependency]
features = []
path = "/home/nmf/nmide/src-tauri/modules/rust_dependency"


[dependencies.tab_wrapper]
features = []
path = "/home/nmf/nmide/src-tauri/modules/tab_wrapper"


[dependencies.trivial_module]
features = []
path = "/home/nmf/nmide/src-tauri/modules/trivial_module"
