[package]
name = "nmide-rust-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
c_vec = "2.0.0"
safer-ffi.features = ["alloc"]
safer-ffi.version = "0.1.9"
serde.version = "1.0.204"
serde.features = ["derive"]
serde_json = "1.0.121"
ts-rs = "9.0.1"

[build-dependencies]
bindgen = "0.69.4"
