[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
rstest = "0.22.0"
safer-ffi = "0.1.12"
tokio = { version = "1.39.3", features = ["full"] }
nmide-plugin-manager = { path = "../../nmide-core/src-tauri/nmide-plugin-manager" }
nmide-std-lib = { path = "../../nmide-core/src-tauri/nmide-std-lib" }
libloading = "0.8.5"

[build-dependencies]
anyhow = "1.0.86"

[[bin]]
name = "force-build"
path = "build.rs"
