[package]
name = "debug-core"
version = "0.1.0"
edition = "2024"

[dependencies]
core-std-lib = { path = "../../core/src-tauri/core-std-lib" }
core-module-lib = { path = "../../core/src-tauri/core-module-lib" }
async-trait = "0.1.88"
tokio = { version = "1.45.0", features = ["full"] }
once_cell = "1.21.3"
futures = "0.3.31"
