[package]
name = "ide"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = { version = "2.2.1" }
tauri-plugin-log = { version = "2.3.1" }
tauri-plugin-shell = { version = "2.2.1" }
tauri-plugin-cli = { version = "2.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
log4rs = "1.3.0"
toml = { version = "0.8.22", optional = true }
env_logger = "0.11.8"
clap = { version = "4.5.39" }
anyhow = "1.0.97"
async-trait = "0.1.88"
futures = "0.3.31"
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
once_cell = "1.21.3"
core-std-lib = { path = "../../../libs/rust/core-std-lib/", features = ["core"] }
core-module-lib = { path = "../../../libs/rust/core-module-lib/" }
foreign-std-lib = { path = "../../../libs/rust/foreign-std-lib/" }
async-ffi = { version = "0.5.0", features = ["abi_stable"] }
abi_stable = { version = "0.11.3" }
