[package]
name = "core-std-lib"
version = "2.0.2"
edition = "2021"

[lib]
name = "core_std_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
async-trait = "0.1.88"
core-macros = { path = "../core-macros/" }
once_cell = "1.20.2"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
ts-rs = { version = "10.1.0" }
