[package]
name = "core_modules"
version = "0.1.0"
edition = "2024"

[dependencies]
core-std-lib = { path = "../../../libs/rust/core-std-lib/", features = ["core"] }
core-module-lib = { path = "../../../libs/rust/core-module-lib/" }

# ============================================================================ #
