[package]
name = "foreign-std-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
abi_stable = { version = "0.11.3", optional = true }
rstest = "0.25.0"
serde = { version = "1.0.214", features = ["derive"] }
stabby = { version = "36.1.1", optional = true }
ts-rs = { version = "10.1.0", optional = true }
core-std-lib = { path = "../core-std-lib/" }
ordered-float = { version = "5.0.0", features = ["serde"], optional = true }
serde_json = "1.0.140"

[features]
default = ["ts", "rs"]
c = ["dep:stabby"]
ts = ["dep:ts-rs"]
rs = ["dep:abi_stable", "dep:ordered-float"]
